      while loading stamps.
      Mark K. Kim <mkkim214@gmail.com>

    * Ability to bring up the print dialog from the macOS build was
      removed in Tux Paint 0.9.23 to support the new build mechanism.
      It has been re-added.  To access it, option-click the print icon,
      or configure Tux Paint to always bring up the dialog upon print.
      Mark K. Kim <mkkim214@gmail.com>

  * Documentation updates
    ---------------------
    * Mended link to MinGW/MSYS instructions at John Popplewell's website.
      (h/t "sechidis")

    * Improved and expanded usage info (e.g., "tuxpaint --help" output)

  * Misc
    ----
    * Verbose debugging, and "DEBUG_PRINTF()" macro now available;
      see debugging options in INSTALL.txt.
      Mark K. Kim <mkkim214@gmail.com>

  * Notes:
    ------
    * 0.9.23a & 0.9.23b were test versions for macOS that Mark produced
      and sent to individual users for testing.

2018.August.30 (0.9.23)
  * New tools
    ---------
    * Color selector
      Pere Pujal i Carabantes

  * New shapes
    ----------
    * Stars
      Pere Pujal i Carabantes

  * Documentation updates
    ---------------------
    * Made stamp controls (size, flip, mirror) section clearer.
      Fixes https://sourceforge.net/p/tuxpaint/bugs/182/

    * Cleaned up and reorganized docs subdirectory.

  * New locales
    -----------
    * Bengali
      Provided by Chandrakant Dhutadmal

    * Bodo
      Provided by Chandrakant Dhutadmal

    * Dogri
      Provided by Chandrakant Dhutadmal

    * Kabyle (aka Kabylian)
      Yacine Bouklif <yacine_tizi2003@yahoo.fr>

    * Kashmiri (Devanagari)
    * Kashmiri (Perso-Arabic)
      Provided by Chandrakant Dhutadmal

    * Sindhi (Devanagari)
    * Sindhi (Perso-Arabic)
      Provided by Chandrakant Dhutadmal

    * Urdu
      Provided by Chandrakant Dhutadmal

  * Localization Updates:
    ---------------------
    * Various
      Chris Leonard <cjlhomeaddress@gmail.com>

    * Aragnoes translation