@@ -11,7 +11,7 @@ alink="#FF00FF">
 
 version
 
-0.9.23c
+0.9.24
 
 </h1>
 <h2>Options Documentation</h2>
@@ -19,7 +19,7 @@ version
 <p>Copyright (c) 2002-2018 by various contributors; see AUTHORS.txt<br/>
 <a href="http://www.tuxpaint.org/">http://www.tuxpaint.org/</a></p>
 
-<p>October 7, 2018</p>
+<p>December 18, 2018</p>
 
 
 </center>
@@ -445,6 +445,12 @@ version
   <dd>
     Disables the <b>Label</b> tool: the tool that allows text entry
     which can be edited later.
+  </dd>
+
+  <dt><code><b>newcolorslast=yes</b></code></dt>
+  <dd>
+    Places the blank color options in the <b>New</b> dialog at the end,
+    so that any Starters and/or Templates are shown first.
   </dd>
 
   <dt><code><b>mirrorstamps=yes</b></code></dt>
@@ -1527,6 +1533,7 @@ version
     --nostampcontrols<br>
     --nomagiccontrols<br>
     --nolabel<br>
+    --newcolorslast<br>
     --mouse-accessibility<br>
     --onscreen-keyboard<br>
     --onscreen-keyboard-layout<br>
@@ -1600,6 +1607,7 @@ version
     --stampcontrols<br>
     --magiccontrols<br>
     --label<br>
+    --newcolorsfirst<br>
     --nosysfonts<br>
     --currentlocalefont<br>
     --dontmirrorstamps<br>
