@@ -123,6 +123,8 @@ mirrorstamps,        POSBOOL(mirrorstamps)
 mixedcase,           NEGBOOL(only_uppercase)
 mouse,               NEGBOOL(keymouse)
 native,              POSBOOL(native_screensize)
+newcolorsfirst,      NEGBOOL(new_colors_last)
+newcolorslast,       POSBOOL(new_colors_last)
 orient,              MULTI(rotate_orientation)
 outlines,            NEGBOOL(dont_do_xor)
 papersize,           MULTI(papersize)
