@@ -28,6 +28,7 @@ struct cfginfo
   const char *keymouse;
   const char *mirrorstamps;
   const char *native_screensize;
+  const char *new_colors_last;
   const char *no_button_distinction;
   const char *no_fancy_cursors;
   const char *no_system_fonts;
